[gd_scene load_steps=26 format=2]

[ext_resource path="res://Sprites/Interactables/time_machine.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Interactables/TimeMachine.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Interactables/needs_chip_text.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Interactables/InteractArrow.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 37, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 74, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 111, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 148, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 185, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 222, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 259, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 296, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 333, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 370, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 407, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 444, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 481, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 518, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 555, 0, 37, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 592, 0, 37, 24 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Working",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 12 )

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NeedsChipText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NeedsChipText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "show_needs_chip"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("NeedsChipText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.366022, 1 ),
"update": 0,
"values": [ Vector2( 4, -20 ), Vector2( 4, -36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NeedsChipText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TimeMachine" type="AnimatedSprite"]
frames = SubResource( 19 )
animation = "Off"
playing = true
centered = false
offset = Vector2( -12, -24 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 4, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="SelectorLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="NeedsChipText" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 5, -20 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="InteractArrow" parent="." instance=ExtResource( 4 )]
position = Vector2( 4, -40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 20 )
anims/show_needs_chip = SubResource( 21 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
